# solo

./: .gitignore  README.md  config.yml  pyproject.toml
engine/: context.py  decision_gates.py  llm_provider.py  notifier.py  state_loader.py  tracer.py
flows/: autonomous_flow.py
intake/: intake.py  renderer.py  schema.py
tasks/: bootstrap.py  design.py  implement.py  test.py  verify.py
templates/: ACCEPTANCE_CRITERIA.md  CONSTRAINTS.md  DECISION_GATES.yml  NON_GOALS.md  REQUIREMENTS.md
templates/prompts/: design.txt  implement.txt  test.txt  verify.txt
